Add Auth0 SPA SDK script import to buyer_dashboard.html

--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -7,6 +7,9 @@
 <title data-i18n="title">
    Buyer Dashboard — VanGuard Escrow
   </title>
+
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+
 <!-- i18next (client-side translations) -->
 <style>
    body{font-family:"Segoe UI",sans-serif;background:#f8fafc;margin:0;color:#0f172a;}
